TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")

2008-09-15 MickeM
 * Fixed so NSCLient++ can load with "broken plugins" (before it printed an error and exited)
 + Added a very basic simple .net plugin (and a wrapper)

2008-09-14 MickeM - 0.3.4 RC-4
 * Fixed issue with OS detection (again)
 * Fixed issue with plugin unloading (again)
 * Fixed issue with SSL socket not unloading properly
 * Fixed issue with "login" and "no session" (should work now I hope) (#222)
 * Changed so all projects build under "tmp" instead of under respecitve directory. (simpler to remove all "tmp" files now)

2008-09-12 MickeM
 * Thanks to everyone who listened in on my session at NETWAYS Nagios Konferenz 2008!

2008-09-09 MickeM - 0.3.4 RC-3
 * Improved error handling for the WMI checks.
 + CheckWMI: Added support for extracting numbers from strings 
 * Fixed performance data for "large float values" to be rendered without scientific notation. (#151)
 * Fixed issue with & and some commands via check_nt.
 * Fixed a crash on exit (which I added in Rc1).
 * Added 10 "bytes" the CPU buffer: (#174)
 + Added new option to [EventLog] section buffer_size to change the size of the buffer used when scanning the evenlotg (defaults to 64k).
 * Fixed error handling in CHeckEventLog so errors are repoorted properly (#184)

2008-09-08 MickeM - 0.3.4 RC-2
 * Fixed issue in windows 2008 with system tray (shared_session).
 * Fixed installer issue (should run (i hope) service installer on install now on 64 bit os)
 * Fixed issue with unloading plugins and log (causing "timeouts" when exiting some times)

2008-09-07 MickeM
 + Added sample powershell script as well as a workaround for making them run.
 * Fixed an issue making powershell scripts (and possibly others) not timeout properly.